# Cursor

./: README.md  package-lock.json  package.json  pyproject.toml
examples/: left_customers.csv  right_accounts.csv  rules.yaml
src/relmatch/: __init__.py  cli.py  comparators.py  engine.py  models.py  registry.py
tests/: test_engine_basic.py
